<resources>
    <string name="app_name">BlogWeebly</string>

    <string name="test">Test text</string>

    <!-- menu -->
    <string name="action_add">Add post</string>
    <string name="action_settings">Settings</string>
    <string name="action_save">Save</string>
    <string name="action_edit">Edit</string>
    <string name="action_location">Snapshot</string>
    <string name="action_text">Text Format</string>
    <string name="action_add_title">Add Title</string>
    <string name="action_add_content">Add Content</string>
    <string name="action_add_images">Add Images</string>

    <!-- app -->
    <string name="name_settings_activity">Settings</string>
    <string name="name_post_actvity">Publish</string>
    <string name="name_gmap_activity">Map</string>
    <string name="msg_voice">Hello Weeblys!</string>
    <string name="edit">Edit</string>
    <string name="view">View</string>
    <string name="title">Title</string>
    <string name="text">Some Text</string>
    <string name="description">Description</string>
    <string name="close">Close</string>
    <string name="select_view">Select View</string>
    <string name="delete_view">Do you want delete this item? If you delete this, you can not restore again.</string>
    <string name="input">Enter Text</string>
    <string name="input_content">Enter your text here:</string>
    <string name="input_hint">Some text</string>
    <string name="null_text"></string>

    <string name="warning_save">Do you need fill the title or content text first, thank you!</string>
    <string name="warning_pictures">You do not selected any list of pictures</string>

    <string name="title_changelog_pref">BlogWeebly Changelog</string>

    <!-- preferences-->
    <string name="pref_category_title">App Theme</string>
    <string name="pref_theme_color">App Theme Color</string>
    <string name="pref_dark_theme_title">Dark Theme</string>
    <string name="pref_dark_theme_on">Use dark theme</string>
    <string name="pref_dark_theme_off">Do not use dark theme</string>
    <string name="developer">Developer</string>
    <string name="pref_version">Version</string>
    <string name="pref_changelog">Change Log</string>
    <string name="title_activity_maps">Map</string>

    <string name="changelog_text">
        <b><u>Third Party Libraries\n</u></b>
        <i>Butter-Knife\n</i>
        - Author : Jake Wharton\n
        - Url: http://jakewharton.github.io/butterknife/
        <br>\n\n</br>
        <i>Material-Dialogs\n</i>
        - Author : afollestad\n
        - Url: https://github.com/afollestad/material-dialogs
        <br>\n\n</br>
        <i>TwoWay-View\n</i>
        - Author : lucasr\n
        - Url: https://github.com/lucasr/twoway-view/
        <br>\n\n</br>
        <br><u>Native Libraries\n</u></br>
        <i>Support AppCompat V7\n</i>
        - Version : 22.0.0
        <br>\n\n</br>
        <i>Support CardView V7\n</i>
        - Version : 22.0.0
        <br>\n\n</br>
        <i>Support RecyclerView V7\n</i>
        - Version : 22.0.0
        <br>\n\n</br>
        <i>Google Play Services\n</i>
        - Version : 7.0.0
        <br>\n\n</br>
        <b>Developed by</b> <i>Diego Franco</i>
    </string>
</resources>
