<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_category_title">

    <com.afollestad.materialdialogs.prefs.MaterialListPreference
        android:key="app_theme"
        android:title="@string/pref_theme_color"
        android:entries="@array/pref_themes_items"
        android:entryValues="@array/pref_theme_keys"
        android:defaultValue="weebly" />

    <CheckBoxPreference
        android:key="darkTheme"
        android:defaultValue="false"
        android:summaryOn="@string/pref_dark_theme_on"
        android:summaryOff="@string/pref_dark_theme_off"
        android:title="@string/pref_dark_theme_title" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/developer">
        <Preference
            android:key="version"
            android:title="@string/pref_version"
            android:enabled="false" />

        <Preference
            android:key="changelog"
            android:title="@string/pref_changelog"
            android:enabled="true"
            />
    </PreferenceCategory>

</PreferenceScreen>