<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginBottom="@dimen/activity_vertical_margin">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:orientation="vertical"
        android:foreground="?android:attr/selectableItemBackground"
        card_view:cardCornerRadius="2dp"
        card_view:cardElevation="2dp"
        card_view:cardBackgroundColor="@color/bg_card">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/item_imageview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/img_top"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:background="@color/bg_layout">

                <TextView
                    android:id="@+id/item_title"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:textStyle="bold"
                    android:textSize="@dimen/size_text_title"
                    android:gravity="center_vertical"
                    android:text="@string/test"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    style="@style/TextAppearance.AppCompat.Title"/>

            </LinearLayout>


        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/item_subtitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textStyle="italic"
                android:textSize="@dimen/size_text_content"
                style="@style/TextAppearance.Widget.AppCompat.Toolbar.Subtitle"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="4dp"
                android:text="@string/test"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:layout_gravity="right"
            android:layout_alignParentRight="true">

            <Button
                android:id="@+id/item_edit_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit"
                android:layout_gravity="right"
                style="?android:attr/borderlessButtonStyle"/>

            <Button
                android:id="@+id/item_view_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view"
                android:layout_gravity="right"
                style="?android:attr/borderlessButtonStyle"/>

        </LinearLayout>


       </LinearLayout>
        </android.support.v7.widget.CardView>


</LinearLayout>